@@ -45,6 +45,11 @@ ToDo/Notes:
 	- In fs/ntfs/aops.c::ntfs_writepage(), if t he page is fully outside
 	  i_size, i.e. race with truncate, invalidate the buffers on the page
 	  so that they become freeable and hence the page does not leak.
+	- Implement extension of resident files in the regular file write code
+	  paths (fs/ntfs/aops.c::ntfs_{prepare,commit}_write()).  At present
+	  this only works until the data attribute becomes too big for the mft
+	  record after which we abort the write returning -EOPNOTSUPP from
+	  ntfs_prepare_write().
 
 2.1.21 - Fix some races and bugs, rewrite mft write code, add mft allocator.
 
